flambda-backend/tests/simd/errors/i32c1.expected
File "i32c1.ml", line 1:
Error: Did not find constant int arguments for caml_int32x4_const1
